--- a/content/css/contents.css
+++ b/content/css/contents.css
@@ -69,8 +69,8 @@
 .chk_item>.radio>.lbl{padding:14px 20px 14px 47px;margin-left:0;}
 
 .chk_list .chk_item{border-radius:0;}
-.chk_list .chk_item:first-child{border-radius:4px 4px 0 0;}
-.chk_list .chk_item:last-child{border-radius:0 0 4px 4px;}
+.chk_list .chk_item:first-child{border-top-right-radius:4px;border-top-left-radius:4px;}
+.chk_list .chk_item:last-child{border-bottom-right-radius:4px;border-bottom-left-radius:4px;}
 .chk_list .chk_item+.chk_item{margin-top:0;border-top:0 none;}
 .chk_list .chk_item .checkbox{padding-right:50px;}
 .chk_list .chk_item .checkbox>.chk_link{display:block;position:absolute;top:0;right:15px;width:30px;height:100%;overflow:hidden;z-index:2;}
