--- a/content/css/contents.css
+++ b/content/css/contents.css
@@ -140,3 +140,7 @@
 .sel_item_wrap{margin-top:15px;font-size:0;}
 .sel_item{position:relative;display:inline-block;margin:3px 6px 3px 0;border:1px solid #d4d4d4;padding:6px 35px 6px 10px;border-radius:20px;vertical-align:top;font-size:1.3rem;}
 .sel_item .del{position:absolute;top:50%;right:5px;display:inline-block;width:20px;height:20px;margin-top:-10px;vertical-align:middle;background:url(../images/common/inp_del.png);font-size:3px;color:transparent;background-size:contain;}
+
+/*서비스신청*/
+.term_info_box{padding:140px 20px 30px;font-size:1.5rem;color:#111;text-align:center;}
+.term_info_box.verify{background:url(../images/contents/img_verify1.png) center 18px no-repeat;background-size:88px auto;}
