--- a/content/css/contents.css
+++ b/content/css/contents.css
@@ -29,12 +29,13 @@
 .error_txt{display:none;padding-left:20px;color:#fd775c;background:url(../images/common/ico_error_txt.png) no-repeat left 3px;background-size:14px auto;}
 .error_txt.checked{color:#3182f7;background-image:url(../images/common/ico_error_txt_on.png);}
 
-.form_item{position:relative;margin-top:35px;}
+.form_item{position:relative;margin-top:22px;}
+.tit_h2+.form_item{margin-top:25px;}
 .section>.form_item:first-child{margin-top:0;}
-.form_item .fm_lb{display:block;font-weight:500;font-size:1.4rem;cursor:default;}
+.form_item .fm_lb{display:block;font-size:1.5rem;cursor:default;color:#111;}
 .form_item .fm_lb .tooltip_wrap{vertical-align:1px;}
 .form_item .fm_lb + .fm_val,
-.form_item .fm_lb + .fm_cont{margin-top:8px;}
+.form_item .fm_lb + .fm_cont{margin-top:7px;}
 .form_item .fm_val{display:block;height:44px;line-height:42px;font-size:1.4rem;color:#111;border:1px solid #ddd;border-radius:4px;padding:0 11px;}
 .form_item .fm_cont{position:relative;}
 .form_item .fm_cont>.btn_toggle:first-child{margin-top:10px;}
