--- a/content/css/contents.css
+++ b/content/css/contents.css
@@ -142,5 +142,6 @@
 .sel_item .del{position:absolute;top:50%;right:5px;display:inline-block;width:20px;height:20px;margin-top:-10px;vertical-align:middle;background:url(../images/common/inp_del.png);font-size:3px;color:transparent;background-size:contain;}
 
 /*서비스신청*/
-.service_info{padding:140px 20px 30px;font-size:1.5rem;color:#111;text-align:center;}
-.service_info.verify{background:url(../images/contents/img_verify1.png) center 18px no-repeat;background-size:88px auto;}
+.service_info{padding-top:18px;color:#111;text-align:center;font-size:0px;}
+.service_info .svc_icon{display:inline-block;overflow:hidden;width:88px;height:88px;box-shadow:none;background:url(../images/contents/img_verify1.png) 0 0 no-repeat;background-size:88px auto;}
+.service_info p{margin-top:28px;font-size:1.5rem;}
