--- a/content/css/common.css
+++ b/content/css/common.css
@@ -740,6 +740,8 @@ html.mobile .tbl_scroll::-webkit-scrollbar{display:none;}
 .i_ico_20{width:20px;height:20px;background-color:#bbb;background-image:url(../images/common/spr_i_ico_20.png);border-radius:100%;background-size:20px auto;}
 .i_ico_20.ico_1{background-position:0 0;}
 .i_ico_20.ico_2{background-position:0 -20px;}
+.i_ico_88{width:88px;height:88px;background-color:#f8f8f8;border-radius:100%;background-size:88px auto;}
+.i_ico_88.ico_1{background-image:url(../images/contents/ico_svc1.png);}
 
 /* scl_datepicker */
 .scl_cal_wrap{display:none;position:relative;margin-top:-4px;padding-top:4px;border:1px solid #ddd;border-top-width:0;overflow:hidden;}
