--- a/content/css/common.css
+++ b/content/css/common.css
@@ -508,9 +508,8 @@ div.checkbox+div.checkbox{margin-top:13px;}
 .btn_toggle li+li.active a:after{content:'';display:block;position:absolute;left:-1px;top:-1px;bottom:-1px;width:1px;background:#3182f7;}
 .btn_toggle .select{position:absolute;left:1px;top:1px;right:1px;width:auto;z-index:2;}
 .btn_toggle .select select, 
-.btn_toggle .btn_select{border-width:0;height:42px;color:inherit;}
+.btn_toggle .btn_select{border-width:0;height:42px;}
 .btn_toggle .select:after{display:none;}
-.btn_toggle .btn_select:after{right:10px;}
 .btn_toggle input:checked+label+.select a{color:#3182f7;}
 
 .btn_toggle.small li input+label,
